crates/pg_syntax/tests/snapshots/postgres_regress/float4@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO FLOAT4_TBL(f1) VALUES ('5.0.0');"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "FLOAT4_TBL"
  Ascii40@22..23 "("
  ResTarget@23..25
    Ident@23..25 "f1"
  Ascii41@25..26 ")"
  Whitespace@26..27 " "
  SelectStmt@27..42
    Values@27..33 "VALUES"
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..42
      AConst@35..42
        Sconst@35..42 "'5.0.0'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

