crates/pg_syntax/tests/snapshots/postgres_regress/float4@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'nan'::float4;"
---
SelectStmt@0..21
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..20
    TypeCast@7..20
      AConst@7..12
        Sconst@7..12 "'nan'"
      Typecast@12..14 "::"
      TypeName@14..20
        Ident@14..20 "float4"
  Ascii59@20..21 ";"

